package com.skilldistillery.game.entities;

public enum Brightness {
	
	LOW, MEDIUM, HIGH

}
