package com.skilldistillery.game.entities;

public abstract class Character {
	private String name;

} // end abstract class Character