package com.skilldistillery.game.entities;

public abstract class Equipment {

}
