package com.skilldistillery.game.entities;

public enum FoodItems {

}
