package com.skilldistillery.game.entities;

public class Guide extends Character{

}
