package com.skilldistillery.game.entities;

public class Light extends Equipment {

}
