package com.skilldistillery.game.entities;

public class Player extends Character {

}
