package com.skilldistillery.game.entities;

public class Snipe extends Character{

}
