package com.skilldistillery.game.entities;

public class Storage extends Equipment {

}
